[package]
edition = "2021"
name    = "test-blinky"
version = "0.1.0"

[[bin]]
name = "test-blinky"
path = "./src/main.rs"

[dependencies]

#esp-hal stuff
esp-alloc = "0.6.0"
esp-println = {version = "0.13.0", features = ["esp32c6"]}
esp-backtrace = { version = "0.15.0", features = [
  "println",
  "esp32c6",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "0.23.1", features = [ "esp32c6", "unstable"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
 # "defmt",
  "esp-alloc",
  "esp32c6",
  "utils",
  "wifi",
  "log",
] }

#embassy stuff
esp-hal-embassy = { version = "0.6.0", features = ["esp32c6"] }
embassy-executor = { version = "0.7.0", features = [
 # "defmt",
  "nightly",
  "task-arena-size-20480",
  
] }
embassy-net = { version = "0.6.0", features = [
  "tcp",
  "udp",
  "dhcpv4",
  "medium-ethernet",
  "proto-ipv6",
  "log",
  "dns"
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-sync = { version = "0.6.2", default-features = false }
embassy-futures = "0.1.1"

#other stuff
critical-section    = "1.1.3"
static_cell = { version = "2.1.0", features = ["nightly"] }
heapless = { version = "0.8.0", default-features = false }
lazy_static = {version = "1.5.0", features = ["spin_no_std"] }
hex = { version = "0.4.3", default-features = false }

#smart-leds
smart-leds = "0.4.0"
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community", rev = "ad75112", features = ["esp32c6"] }

#mqtt
rust-mqtt = { version = "0.3.0", default-features = false }
serde = { version = "1.0.217",  default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"

#eink
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
profont = "0.7.0"
#blockingc eink
  #weact-studio-epd = { version = "0.1.1", features = ["blocking"]}
  #embedded-hal-bus = {version = "0.3.0" }
#async eink
  weact-studio-epd = { version = "0.1.1" }
  embedded-hal-bus = {version = "0.3.0", features = ["async"]}


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false


